<resources>
    <string name="app_name">FriendsWithTail</string>
    <string name="pets">Pets</string>
    <string name="about_us">About us</string>
    <string name="nearby_petshop">Nearby Petshop</string>
    <string name="tag">tag</string>
    <string name="swipe_left_for_register">swipe_left_for_register</string>
    <string name="e_mail">e_mail</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="right_arrow">right arrow</string>
    <string name="re_type_password">re_type_password</string>
    <string name="swipe_right_for_login">swipe_right_for_login</string>
    <string name="register">register</string>
    <string name="your_name">your_name</string>
    <string name="left_arrow">left arrow</string>
    <string name="navigation_drawer_open">open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>
    <string name="event">event</string>
    <string name="report">report</string>
    <string name="btn">btn</string>
</resources>