<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:fontFamily="@font/indigo_daisy"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/tv_subtitle"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag"
        android:textSize="17sp"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:layout_above="@id/et_email"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/et_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/login"
        android:onClick="login"
        android:textColor="@android:color/white"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_arrow_right"
        android:layout_above="@id/swipeRight"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/right_arrow" />

    <TextView
        android:id="@+id/swipeRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swipe_left_for_register"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_regular"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>


</RelativeLayout>
