<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F6E38D"
    tools:context=".homePage">


    <Button
        android:id="@+id/pets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pets"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="100dp"
        android:onClick="pets"/>

    <Button
        android:id="@+id/Petshop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nearby_petshop"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="100dp"
        android:onClick="petshop"/>

    <Button
        android:id="@+id/Aboutus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="100dp"
        android:onClick="about"/>

</LinearLayout>